<resources>
    <string name="app_name">Tasks</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="app_title">Tasks</string>
    <string name="form_task_name">Task Title:</string>
    <string name="form_task_description">Description:</string>
    <string name="form_task_description_hint">Describe your task here</string>
    <string name="form_task_img">Task image</string>
    <string name="btn_form_task_save">Save</string>
    <string name="form_task_checkbox">Completed:</string>
    <string name="alertTitleDelete">Warning</string>
    <string name="alertMessageSufix">\?</string>
    <string name="alertMessagePrefix">Confirm the deletion of the task</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="formEmpty">Please fill at least title and description</string>
    <string name="formTitleImageSelect">Image</string>
    <string name="formImageFromCamera">Take a picture</string>
    <string name="formImageFromGallery">Select on gallery</string>
</resources>